# int20h-videoapp

./: .gitignore  README.md  docker-compose.yml  videoapp-nossl.conf
.github/workflows/: deploy.yml
api_gateway/: .env.test  Dockerfile  Makefile  pyproject.toml  uwsgi.ini
api_gateway/app/: app.py  models.py  settings.py
api_gateway/app/schemes/: files.py  rooms.py  tokens.py  users.py
api_gateway/app/views/: __init__.py  files.py
api_gateway/app/views/auth/: tokens.py
api_gateway/app/views/rooms/: rooms.py
api_gateway/app/views/users/: users.py
chat_service/: Dockerfile  package-lock.json  package.json
chat_service/src/: config.js  dbconnection.js  index.js
chat_service/src/models/: Chat.js
frontend_service/: .eslintrc.js  Dockerfile  package-lock.json  package.json  tsconfig.json
frontend_service/public/: index.html
frontend_service/src/: App.scss  App.tsx  index.tsx  mixin.scss
frontend_service/src/api/: actions.ts  config.ts
frontend_service/src/components/: CallControlsBar.tsx  ChatInput.tsx  Header.tsx  MessageBubble.tsx  MessageList.tsx  RoomCard.tsx  RoomChat.tsx  UserCard.tsx
frontend_service/src/constants/: routes.ts
infra/: acm.tf  cloudfront.tf  ecr.tf  iam.tf  main.tf  outputs.tf  route53.tf  static-website.tf  variables.tf
janus_service/: Dockerfile
mongo_service/: Dockerfile
mongo_service/initialization_scripts/: init-chat-db.js
nginx_service/block_configs/: videoapp.conf
notification_service/: package-lock.json  package.json
notification_service/src/: config.js  dbconnection.js  index.js
(+37 files in other folders)
