[tool.poetry]
name = "api_gateway"
version = "0.1.0"
description = "API Gateway for Videoapp"
authors = ["gurland <stas.gurland@gmail.com>"]
license = "GNU GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
flask-smorest = "^0.36.0"
redis = "^4.1.1"
peewee = "^3.14.8"
Flask-JWT-Extended = "^4.3.1"
uWSGI = "^2.0.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
